--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@mui/material": "^5.8.0",
     "@mui/styles": "^5.8.0",
     "axios": "^0.27.2",
+    "critters": "^0.0.7",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
-    "react-multi-carousel": "^2.8.0"
+    "react-multi-carousel": "^2.8.0",
+    "swiper": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.15.0",
