--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
+    "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.8.0",
