--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.10.3",
     "@emotion/react": "^11.9.0",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.8.1",
@@ -18,6 +19,7 @@
     "axios": "^0.27.2",
     "critters": "^0.0.7",
     "next": "12.1.6",
+    "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
